# Tickerlens

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agent-memory/code-reviewer/: MEMORY.md
.claude/agents/: code-reviewer.md  prd-guardian.md  xbrl-specialist.md
.claude/commands/: download-earnings.md  phase-complete.md  review.md  status.md
.githooks/: pre-commit
CRDO/: DOCUMENT_INVENTORY.md  README.md  RESEARCH_COLLECTION_GUIDE.md
CRDO/2025/Transcripts/: CRDO Combined Earnings Transcripts.docx
alembic/: env.py
alembic/versions/: 017aee7df1c1_add_balance_sheet_columns_to_quarterly_.py  44892912880c_add_description_last_price_market_cap_.py  6b81522c5e05_add_press_release_columns_to_quarterly_.py  89c6a34083be_add_companies_and_quarterly_financials.py  d1f5704c5e60_add_risk_factors_columns_to_companies.py
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  DECISIONS.md  PRD_Tickerlens.md  PROJECT_STATUS.md
docs/progress/: PHASE-1.md  PHASE-template.md
memory/: MEMORY.md  skill_earnings_download.md
notebooks/: 01_edgar_first_look.ipynb  02_edgar_generalization_jnj.ipynb
scripts/: download_avgo_earnings.py  download_earnings.py  export_earnings_zip.py
src/tickerlens/: __init__.py  config.py  main.py
src/tickerlens/data/: __init__.py  edgar.py  filings.py  sic.py  wikipedia.py  xbrl.py  yahoo.py
src/tickerlens/models/: __init__.py  company.py  database.py  quarterly_financial.py
src/tickerlens/routes/: company.py
src/tickerlens/services/: financials.py  ir_download.py
src/tickerlens/templates/: base.html  index.html
src/tickerlens/templates/company/: detail.html  overview.html
src/tickerlens/templates/partials/: detail_data.html
tests/data/: test_filings.py  test_xbrl.py
tests/services/: test_financials.py
