[project]
name = "tickerlens"
version = "0.1.0"
description = "Personal research tool for analyzing US public companies from SEC EDGAR data"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.0",
    "pandas>=3.0.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32.0",
    "yfinance>=0.2.50",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tickerlens"]
